Index alignment fix

--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ body {
 }
 
 .container {
+  position: absolute;
+  right: 0;
   width: 1200px;
-  margin-left: 800px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
